--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,14 @@ h1{
   height: 400px;
   border-radius: 5px;
 }
+input{
+  margin-top: 3px;
+  border: 1px solid black !important;
+}
+h2{
+  padding: 10px ;
+  text-align: center;
+  font-weight: bold !important;
+  font-size: 20px !important;
+
+}
