--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,15 @@ h1{
   color: white !important;
   box-shadow: none !important;
 }
+.bt{
+  background-color: white;
+  color: black !important;
+  box-shadow: none !important;
+  border-radius: 5px;
+}
+.tb{
+  width: 100% !important
+}
 .shadow{
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-top: 20px !important;
@@ -54,9 +63,14 @@ h1{
   height: 400px;
   border-radius: 5px;
 }
-input{
-  margin-top: 3px;
+input,select,.ant-picker{
+
+  margin-top: 10px;
   border: 1px solid black !important;
+  width: 100% !important;
+  border-radius: 2px !important;
+  height: 35px;
+
 }
 h2{
   padding: 10px ;
@@ -64,4 +78,10 @@ h2{
   font-weight: bold !important;
   font-size: 20px !important;
 
+}
+.dropdown-toggle{
+  border: 0px solid black !important;
+}
+.ant-picker-input input{
+  border: none !important;
 }
