--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,55 +16,69 @@ code {
     monospace;
 }
 
-.navbar{
+.navbar {
   background-color: black !important;
-  
+
 
 }
-.nav-link{
+
+.nav-link {
   color: white !important;
   text-align: right !important;
 }
-.navbar-brand{
+
+.navbar-brand {
   color: white !important;
 }
-.navbar-nav{
+
+.navbar-nav {
   margin-left: auto !important;
 }
-.smalling{
+
+.smalling {
   height: 200px;
   width: 100% !important;
   border-radius: 5px !important;
 }
-h1{
+
+h1 {
   font-size: 20px;
+
 }
-.btn{
-  background-color: black !important;
-  color: white !important;
+
+.btn {
+  background-color: black ;
+  color: white ;
   box-shadow: none !important;
 }
-.bt{
+
+.bt {
   background-color: white;
   color: black !important;
   box-shadow: none !important;
   border-radius: 5px;
 }
-.tb{
+
+.tb {
   width: 100% !important
 }
-.shadow{
+
+.shadow {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-top: 20px !important;
   border-radius: 5px !important;
   padding: 20px !important;
-  
+
 }
-.bigimg{
+
+.bigimg {
   height: 400px;
   border-radius: 5px;
 }
-input,select,.ant-picker{
+
+input,
+select,
+.ant-picker {
 
   margin-top: 10px;
   border: 1px solid black !important;
@@ -72,16 +87,32 @@ input,select,.ant-picker{
   height: 35px;
 
 }
-h2{
-  padding: 10px ;
+
+h2 {
+  padding: 10px;
   text-align: center;
-  font-weight: bold !important;
-  font-size: 20px !important;
+  font-weight: bold;
+  font-size: 20px;
 
 }
-.dropdown-toggle{
+
+.dropdown-toggle {
   border: 0px solid black !important;
 }
-.ant-picker-input input{
+
+.ant-picker-input input {
   border: none !important;
+}
+
+.landing {
+  background-color: black !important;
+  height: 100vh;
+  padding-top: 100px;
+  
+ 
+  
+  
+}
+.btnlanding{
+  margin-top: 20px;
 }
